<?xml version="1.0"?>
<package format="2">
  <name>ROS_kurs</name>
  <version>0.0.0</version>

  <description>
    basic nodes used for ros course
  </description>

  <maintainer email="o.c.vage@gmail.com">Ola Chr. Våge</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
